<resources>
    <string name="app_name">燕尾帽</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="update">更新</string>
    <string name="modify">修改</string>
    <string name="submit">提交</string>
    <string name="upload_phone">上传照片</string>
    <string name="me">我</string>
    <string name="skip">跳过</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="welcome_text">西安巴斯光年软件科技有限公司提供服务</string>
    <string name="we_know_nurse">让智慧护理触手可及</string>
    <string name="bind">绑定</string>
    <string name="use_immediately">立刻体验</string>
    <string name="remark">备注</string>
    <string name="new_user_signup">新用户注册</string>
    <string name="country_and_region">国家和地区</string>
    <string name="country_china_number">中国 +86</string>
    <string name="default_country_code">+86</string>
    <string name="cellphone_number">手机号码</string>
    <string name="origin_cellphone_number">原手机号码</string>
    <string name="new_cellphone_number">新手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="password">密码</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="protocol">燕尾帽服务协议</string>
    <string name="please_agree">请勾选同意</string>
    <string name="signup">注册</string>
    <string name="vertical_line">|</string>
    <string name="press_login">点击登录，表示您同意</string>
    <string name="press_signup">点击注册，表示您同意</string>
    <string name="forget_password">忘记密码</string>
    <string name="verification_code_login">手机验证码登录</string>
    <string name="third_party_login">第三方登录</string>
    <string name="wechat">微信</string>
    <string name="in_hospital">院内</string>
    <string name="qq">QQ</string>
    <string name="microblog">微博</string>
    <string name="hospital_account">院内账号</string>
    <string name="setup_password">设置密码</string>
    <string name="user_account_and_password_login">使用账号密码登录</string>
    <string name="hospital_account_login">院内账号登录</string>
    <string name="cellphone">手机</string>
    <string name="login">登录</string>
    <string name="login_failed">登录失败</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="account">账号</string>
    <string name="please_input_account">请输入账号</string>
    <string name="password_empty">密码不能为空</string>
    <string name="account_empty">账号不能为空</string>
    <string name="wechat_not_install">你还未安装微信</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_failed">注册失败</string>
    <string name="im_signup_failed">通讯注册失败</string>
    <string name="get_verification_code_failed">发送验证码失败</string>
    <string name="get_verification_finished">验证码已发送</string>
    <string name="cellphone_empty">手机号不能为空</string>
    <string name="cellphone_invalid">手机号格式不正确</string>
    <string name="cellphone_dismatch">手机号不匹配</string>
    <string name="verification_empty">验证码不正确</string>
    <string name="verification_code_invalid">验证码不正确</string>
    <string name="verification_code_length_invalid">验证码长度不正确</string>
    <string name="password_length_invalid">密码长度应在4和12之间</string>
    <string name="set_password_failed">设置密码失败</string>
    <string name="message">消息</string>
    <string name="add_friend_apply">好友申请</string>
    <string name="office">科室</string>
    <string name="business">院务</string>
    <string name="event_report">护理不良事件</string>
    <string name="nurse_class">护士学堂</string>
    <string name="credit_check">学分查看</string>
    <string name="schedule_check">排班查看</string>
    <string name="announcement">公告</string>
    <string name="more">更多</string>
    <string name="fall_down_event">跌倒事件</string>
    <string name="fall_bed_event">坠床事件</string>
    <string name="pipe_line_event">管路滑脱</string>
    <string name="medicine_event">给药事件</string>
    <string name="pressure_sore_event">压疮评估</string>
    <string name="profession_event">职业暴露</string>
    <string name="other_event">其他事件</string>
    <string name="zero_event">零事件</string>
    <string name="score">分</string>
    <string name="license_units">授权单位: </string>
    <string name="activity_time">活动时间: </string>
    <string name="happened_time">发生时间</string>
    <string name="patient_number">患者住院号</string>
    <string name="please_patient_number">请填写住院号</string>
    <string name="patient_sex">患者性别</string>
    <string name="patient_age">患者年龄</string>
    <string name="age_year">岁</string>
    <string name="please_age">请输入年龄</string>
    <string name="nursing_level">护理级别</string>
    <string name="level_1">I级</string>
    <string name="level_2">II级</string>
    <string name="level_3">III级</string>
    <string name="level_special">特级</string>
    <string name="patient_diagnosis">患者诊断</string>
    <string name="assessment_time">评估时间</string>
    <string name="assessment_score">评估分值</string>
    <string name="please_assessment_score">请填写评估分值</string>
    <string name="if_dangerous">是否高危</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="if_defending_measure">是否采取防护措施</string>
    <string name="fall_down_position">跌倒时位置</string>
    <string name="other">其他</string>
    <string name="fall_down_status">跌倒时状态</string>
    <string name="spirit_status">精神状态</string>
    <string name="self_care_ability">生活自理能力</string>
    <string name="injury_degree">伤害程度</string>
    <string name="dangerous_factor">危险因素</string>
    <string name="fall_down_history">跌倒史</string>
    <string name="use_medicine">使用药物</string>
    <string name="if_ground_good">地面情况是否良好</string>
    <string name="indoor_light">室内光线</string>
    <string name="if_someone_accompany">是否有人陪护</string>
    <string name="damage">造成的伤害</string>
    <string name="scratch_position">擦伤部位</string>
    <string name="laceration_position">撕裂伤部位</string>
    <string name="congestion_position">淤血部位</string>
    <string name="head_damage">头部损伤</string>
    <string name="fracture_position">骨折部位</string>
    <string name="handle_after_fall_down">跌倒后处理</string>
    <string name="event_description">事件描述</string>
    <string name="event_level">事件等级</string>
    <string name="client_category">当事人类别</string>
    <string name="client_title">当事人职称</string>
    <string name="client_education">当事人学历</string>
    <string name="client_working_years">当事人工龄</string>
    <string name="enclosure">附件</string>
    <string name="contact">联系人</string>
    <string name="send">发送</string>
    <string name="message_can_not_be_empty">发送消息不能为空</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_contact">我的联系人</string>
    <string name="press_and_record">按住录音</string>
    <string name="up_and_cancel">手指上划，取消发送</string>
    <string name="loosen_and_cancel">松开手指，取消发送</string>
    <string name="voice_too_short">录音时间过短</string>
    <string name="make_call">打电话</string>
    <string name="send_message">发消息</string>
    <string name="add_contact">添加联系人</string>
    <string name="add_friend">加为好友</string>
    <string name="delete_friend">删除好友</string>
    <string name="please_input_cellphone">请输入手机号</string>
    <string name="scan_and_scan">扫一扫</string>
    <string name="scan_qr_code">扫描二维码名片</string>
    <string name="cellphone_contact">手机联系人</string>
    <string name="add_or_invite_cellphone_contact">添加或邀请通讯录中的好友</string>
    <string name="already_add">已添加</string>
    <string name="add">添加</string>
    <string name="invite">邀请</string>
    <string name="group_name">群名称</string>
    <string name="group_qr_code">群二维码</string>
    <string name="message_ignore">消息免打扰</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="close">关</string>
    <string name="open">开</string>
    <string name="my_group">我的群</string>
    <string name="visiting_card">名片</string>
    <string name="quit_group">退出群聊</string>
    <string name="select_contact">选择联系人</string>
    <string name="unread">未读</string>
    <string name="read">已读</string>
    <string name="unread_status">[未读]</string>
    <string name="read_status">[已读]</string>
    <string name="mine">我的</string>
    <string name="avatar">头像</string>
    <string name="certified">已认证</string>
    <string name="credit">学分</string>
    <string name="collection">收藏</string>
    <string name="schedule">排班</string>
    <string name="exam">考试</string>
    <string name="setting">设置</string>
    <string name="feedback_empty">反馈内容为空</string>
    <string name="origin_password_empty">原始密码为空</string>
    <string name="new_password_empty">新密码为空</string>
    <string name="password_same">新密码和原密码相同</string>
    <string name="password_change_success">密码修改成功</string>
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_finish">清除完毕</string>
    <string name="date_invalid">日期格式有误</string>
    <string name="no_certificate">您还未进行认证哦</string>
    <string name="go_certificate">去认证</string>
    <string name="id_number">编号</string>
    <string name="please_id_number">请输入编号</string>
    <string name="management_number">管理号</string>
    <string name="please_management_number">请输入管理号</string>
    <string name="profession_name">专业名称</string>
    <string name="please_profession_name">请输入专业名称</string>
    <string name="certificate_level">资格级别</string>
    <string name="please_certificate_level">请输入资格级别</string>
    <string name="type">类别</string>
    <string name="please_select_type">请选择类别</string>
    <string name="please_type">请输入类别</string>
    <string name="approve_date">批准日期</string>
    <string name="sign_organization">签发单位</string>
    <string name="please_sign_organization">请输入签发单位</string>
    <string name="sign_date">签发日期</string>
    <string name="please_upload_professional_picture">(请上传资格证清晰照片)</string>
    <string name="please_upload_practising_picture">(请上传执业证清晰照片)</string>
    <string name="please_upload_picture">(请上传清晰照片)</string>
    <string name="certificate_page_1">证件页1</string>
    <string name="certificate_page_2">证件页2</string>
    <string name="certificate_page_3">证件页3</string>
    <string name="submit_and_authentication">提交认证</string>
    <string name="country_nation">国籍</string>
    <string name="please_country_nation">请输入国籍</string>
    <string name="id_card_number">身份证号</string>
    <string name="please_id_card_number">请输入身份证号</string>
    <string name="practising_location">执业地点</string>
    <string name="please_practising_location">请输入执业地点</string>
    <string name="practising_number">执业证书编号</string>
    <string name="first_sign_date">首次注册日期</string>
    <string name="last_sign_date">最近注册日期</string>
    <string name="last_sign_date_valid">最近注册有效期至</string>
    <string name="sign_department">注册机关</string>
    <string name="please_sign_department">请输入注册机关</string>
    <string name="certificate_organization">发证机关</string>
    <string name="please_certificate_organization">请输入发证机关</string>
    <string name="certificate_date">发证日期</string>
    <string name="first_work_date">首次参加工作日期</string>
    <string name="submit_success">提交成功</string>
    <string name="validate_failed">验证失败</string>
    <string name="cellphone_not_exist">手机号不存在</string>
    <string name="tips">提示</string>
    <string name="this_is_the_last_version">当前已经是最新版本</string>
    <string name="found_new_version">发现新版本</string>
    <string name="submit_success_please_wait">信息提交成功，请耐心等待审核</string>
    <string name="audit_failed_please">认证未通过，请重新</string>
    <string name="audit_again">认证</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="feedback">反馈</string>
    <string name="please_writer_your_advice">请写下您宝贵的意见</string>
</resources>