<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.jerry.nurse.activity.EventReportActivity">

    <com.jerry.nurse.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:show_back="true"
        app:title_text="@string/event_report"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/event_paddingLeft"
            android:paddingRight="@dimen/event_paddingLeft">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/event_paddingTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fall_down"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_ddsj"
                    android:text="@string/fall_down_event"/>

                <TextView
                    android:id="@+id/tv_fall_bed"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_acsj"
                    android:text="@string/fall_bed_event"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/event_paddingTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pipe_line"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_glht"
                    android:text="@string/pipe_line_event"/>

                <TextView
                    android:id="@+id/tv_medicine"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_gysj"
                    android:text="@string/medicine_event"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/event_paddingTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pressure_sore"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_ycpg"
                    android:text="@string/pressure_sore_event"/>

                <TextView
                    android:id="@+id/tv_profession"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_zybl"
                    android:text="@string/profession_event"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_paddingTop"
                android:layout_marginTop="@dimen/event_paddingTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_other"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_qtsj"
                    android:text="@string/other_event"/>

                <TextView
                    android:id="@+id/tv_zero"
                    style="@style/EventReportItemStyle"
                    android:drawableTop="@drawable/ssb_lsj"
                    android:text="@string/zero_event"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
