<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jerry.nurse.activity.InputActivity">

    <com.jerry.nurse.view.TitleBar
        android:id="@+id/tb_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:left_text="@string/back"
        app:right_text="@string/save"
        app:title_text="@string/nickname"/>


    <com.jerry.nurse.view.ClearEditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_up_down_bg"
        android:drawablePadding="7dp"
        android:lines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/oil"
        android:textSize="17sp"/>


</LinearLayout>
