<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jerry.nurse.activity.PasswordActivity">

    <com.jerry.nurse.view.TitleBar
        android:id="@+id/tb_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:left_text="@string/back"
        app:right_text="@string/finish"
        app:title_text="@string/setup_password"/>

    <RelativeLayout
        android:id="@+id/rl_password"
        style="@style/BusinessLineStyle"
        android:layout_marginTop="@dimen/block_marinTop">

        <TextView
            style="@style/PersonalInfoLineLeftTextStyle"
            android:layout_marginLeft="@dimen/signup_text_marginLeft"
            android:text="@string/password"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/signup_edit_marginLeft"
            android:layout_marginRight="@dimen/line_paddingLeft"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/signup_password_paddingBottom"
            app:passwordToggleDrawable="@drawable/login_eye">

            <EditText
                android:maxLength="12"
                android:textCursorDrawable="@null"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_no_border"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/line_paddingLeft"
                android:paddingRight="@dimen/line_paddingLeft"
                android:textColor="@color/normal_textColor"
                android:textSize="@dimen/normal_textSize"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</LinearLayout>
