<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jerry.nurse.activity.SexActivity">

    <com.jerry.nurse.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:left_text="@string/back"
        app:title_text="@string/sex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sex_select_line_height"
        android:background="@drawable/plugin_line_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/sex_select_line_marginLeft"
        android:paddingRight="@dimen/sex_select_line_marginLeft">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/monsoon"
            android:textSize="@dimen/sex_select_line_textSize"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_action_check"/>
    </LinearLayout>

    <View
        style="@style/DividerBorderStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sex_select_line_height"
        android:background="@drawable/plugin_line_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/sex_select_line_marginLeft"
        android:paddingRight="@dimen/sex_select_line_marginLeft">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/monsoon"
            android:textSize="@dimen/sex_select_line_textSize"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_action_check"
            android:visibility="invisible"/>
    </LinearLayout>

    <View
        style="@style/DividerBorderStyle"/>


</LinearLayout>
